--- a/index.html
+++ b/index.html
@@ -11,22 +11,22 @@
         <div class="container mx-auto px-4 text-center">
             <h2 class="text-2xl font-bold mb-4">Guia 1</h2>
             <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
-                <a href="pricing-card/pricing.html" class="block bg-white p-4 rounded-lg shadow hover:shadow-lg transition">
+                <a href="../Guia1_20235838/pricing-card/pricing.html" class="block bg-white p-4 rounded-lg shadow hover:shadow-lg transition">
                     <h3 class="text-xl font-semibold mb-2">Ejercicio 1</h3>
                 </a>
-                <a href="producto/producto.html" class="block bg-white p-4 rounded-lg shadow hover:shadow-lg transition">
+                <a href="../Guia1_20235838/producto/producto.html" class="block bg-white p-4 rounded-lg shadow hover:shadow-lg transition">
                     <h3 class="text-xl font-semibold mb-2">Ejercicio 2</h3>
                 </a>
-                <a href="galeria/galeria.html" class="block bg-white p-4 rounded-lg shadow hover:shadow-lg transition">
+                <a href="../Guia1_20235838/galeria/galeria.html" class="block bg-white p-4 rounded-lg shadow hover:shadow-lg transition">
                     <h3 class="text-xl font-semibold mb-2">Ejercicio 3</h3>
                 </a>
-                <a href="login/login.html" class="block bg-white p-4 rounded-lg shadow hover:shadow-lg transition">
+                <a href="../Guia1_20235838/login/login.html" class="block bg-white p-4 rounded-lg shadow hover:shadow-lg transition">
                     <h3 class="text-xl font-semibold mb-2">Ejercicio 4</h3>
                 </a>
-                <a href="clipboard/index.html" class="block bg-white p-4 rounded-lg shadow hover:shadow-lg transition">
+                <a href="../Guia1_20235838/clipboard/index.html" class="block bg-white p-4 rounded-lg shadow hover:shadow-lg transition">
                     <h3 class="text-xl font-semibold mb-2">Ejercicio 5</h3>
                 </a>
-                <a href="complementario/kanye.html" class="block bg-white p-4 rounded-lg shadow hover:shadow-lg transition">
+                <a href="../Guia1_20235838/complementario/kanye.html" class="block bg-white p-4 rounded-lg shadow hover:shadow-lg transition">
                     <h3 class="text-xl font-semibold mb-2">Ejercicio Complementario</h3>
                 </a>
             </div>
