--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
                 <a href="Guia1_20235838/login/login.html" class="block bg-white p-4 rounded-lg shadow hover:shadow-lg transition">
                     <h3 class="text-xl font-semibold mb-2">Ejercicio 4</h3>
                 </a>
-                <a href="../Guia1_20235838/clipboard/index.html" class="block bg-white p-4 rounded-lg shadow hover:shadow-lg transition">
+                <a href="Guia1_20235838/clipboard/index.html" class="block bg-white p-4 rounded-lg shadow hover:shadow-lg transition">
                     <h3 class="text-xl font-semibold mb-2">Ejercicio 5</h3>
                 </a>
-                <a href="../Guia1_20235838/complementario/kanye.html" class="block bg-white p-4 rounded-lg shadow hover:shadow-lg transition">
+                <a href="Guia1_20235838/complementario/kanye.html" class="block bg-white p-4 rounded-lg shadow hover:shadow-lg transition">
                     <h3 class="text-xl font-semibold mb-2">Ejercicio Complementario</h3>
                 </a>
             </div>
