--- a/Guia1_20235838/complementario/kanye.html
+++ b/Guia1_20235838/complementario/kanye.html
@@ -71,7 +71,7 @@
             <h2 class="text-2xl font-bold mb-4">Galería</h2>
             <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
                 <img src="https://imageio.forbes.com/specials-images/imageserve/5ed00f17d4a99d0006d2e738/0x0.jpg?format=jpg&crop=4666,4663,x154,y651,safe&height=416&width=416&fit=bounds" alt="Kanye West" class="w-64 h-64 object-cover rounded-lg shadow">
-                <img src="https://static.wikia.nocookie.net/hip-hop-music/images/5/5c/Kanye_West2.jpeg/revision/latest?cb=20190424071506" alt="Kanye West" class="w-64 h-64 object-cover rounded-lg shadow">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/b/bb/Kanye_West_at_the_Met_Gala_in_2019_2.png" alt="Kanye West" class="w-64 h-64 object-cover rounded-lg shadow">
                 <img src="https://hips.hearstapps.com/hmg-prod/images/gettyimages-1254695432-crop-6711597f37fae.jpg?crop=1xw:1xh;center,top&resize=640:*" alt="Kanye West" class="w-64 h-64 object-cover rounded-lg shadow">
             </div>
         </div>
